refactored for black formating

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
 ]
 
 [project.scripts]
-terragraph = "terragraph.cli:terragraph"
+terragraph = "terragraph.cli:terragraph_cli"
 
 [project.optional-dependencies]
 dev = [
