mypy type annotations added and docs updated with new theme and source added for the core module

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,9 @@ dev = [
     "pytest>=3",
     "pylint",
     "black",
-    "mypy"
+    "mypy",
+    "sphinx",
+    "sphinx-rtd-theme",
 ]
 
 [tool.setuptools]
