--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,8 +25,6 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
-          - "3.11"
-          - "3.12"
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python }}
@@ -36,8 +34,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox
+          pip install tox tox-gh-actions
       - name: Project internals test build
-        run: "tox -e py${{ matrix.python }}"
-      - name: Project security test
-        run: "tox -e safety"
+        run: "tox"
