--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,21 @@
 [tox]
-envlist = py36, py37, py38, flake8
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 terragraph tests
+envlist = pylint, py37, py38, py39, py310
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+extras = dev
 commands =
-    pip install -U pip
-    pytest --basetemp={envtmpdir}
+    pytest --color=yes
+
+[testenv:pylint]
+description = run pylint checks
+extras = dev
+commands = pylint src/terragraph tests
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310, pylint
