--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,39 +1,42 @@
 name: CI/CD Tests
 
 on:
-  push:
-    branches:
-      - main
-    tags:
-      - "*"
-  pull_request:
-    branches:
-      - "*"
+    push:
+        branches:
+            - main
+        tags:
+            - "*"
+    pull_request:
+        branches:
+            - "*"
 
 jobs:
-  tests_run:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        python:
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox tox-gh-actions
-      - name: Project internals test build
-        run: "tox"
+    tests_run:
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                os:
+                    - ubuntu-latest
+                    - macos-latest
+                    - windows-latest
+                python:
+                    - "3.7"
+                    - "3.8"
+                    - "3.9"
+                    - "3.10"
+        steps:
+            -   uses: actions/checkout@v4
+            -   name: Set up Python ${{ matrix.python }}
+                uses: actions/setup-python@v4
+                with:
+                    python-version: ${{ matrix.python }}
+            -   name: Install dependencies
+                run: |
+                    python -m pip install --upgrade pip
+                    pip install tox tox-gh-actions
+                    if [ "${{ runner.os }}" == "Windows" ]; then choco install graphviz; fi
+                    if [ "${{ runner.os }}" == "Linux" ]; then sudo apt-get install -y graphviz; fi
+                    if [ "${{ runner.os }}" == "macOS" ]; then brew install graphviz; fi
+            -   name: Project internals test build
+                run: "tox"
