--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,8 +21,6 @@ jobs:
                     - macos-latest
                     - windows-latest
                 python:
-                    - "3.7"
-                    - "3.8"
                     - "3.9"
                     - "3.10"
         steps:
@@ -35,8 +33,16 @@ jobs:
                 run: |
                     python -m pip install --upgrade pip
                     pip install tox tox-gh-actions
-                    if [ "${{ runner.os }}" == "Windows" ]; then choco install graphviz; fi
-                    if [ "${{ runner.os }}" == "Linux" ]; then sudo apt-get install -y graphviz; fi
-                    if [ "${{ runner.os }}" == "macOS" ]; then brew install graphviz; fi
+
+            -   name: Install Graphviz on Linux
+                if: runner.os == 'Linux'
+                run: sudo apt-get install -y graphviz
+            -   name: Install Graphviz on macOS
+                if: runner.os == 'macOS'
+                run: brew install graphviz
+            -   name: Install Graphviz on Windows
+                if: runner.os == 'Windows'
+                run: choco install graphviz -y
+
             -   name: Project internals test build
                 run: "tox"
