--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [build-system]
-requires = ["setuptools>=61.2"]
+requires = ["setuptools>=61.2",
+    "setuptools-scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "terragraph"
-version = "0.3.3"
+dynamic = ["version"]
 authors = [{name = "Chris Doyle", email = "uk.chris.doyle+cdsre@gmail.com"}]
 license = {text = "MIT license"}
 description = "A package to help vizualise output from terraform graph as an svg file"
@@ -63,4 +64,6 @@ profile = "black"
 
 [tool.tox]
 skip_missing_interpreters = true
-allowlist_externals = "*"
+
+[tool.setuptools_scm]
+version_file = "src/terragraph/_version.py"
